--- a/freehaeyo/src/index.css
+++ b/freehaeyo/src/index.css
@@ -9,6 +9,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  height: 100%;
+  overflow: scroll;
 }
 
 a {
