feat:App에 화면보기용 root에 css 추가 및 index 임시 css 삭제

--- a/freehaeyo/src/App.css
+++ b/freehaeyo/src/App.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
+  /* Todo:임시 화면 보기용 CSS, 삭제하기 */
+  height: 100%;
+  overflow: scroll;
+  /* 여기까지 */
 }
 
 .logo {
